css/main.css
/* ... */
mark {background: #c47529}
ins {background: #d49855}
del {text-decoration: line-through}
::-moz-selection {background: #E74C3C; color: #fff; text-shadow: none} /* selected text */
::selection {background: #E74C3C; color: #fff; text-shadow: none} /* selected text */

/* OTHERS */
strong, b, dt { font-weight: bold}
dfn {font-style: italic}
var, address {font-style: normal}
sub, sup {font-size: 75%; line-height: 0; position: relative; vertical-align: baseline} /* Position 'sub' and 'sup' without affecting line-height */
sup {top: -0.5em} /* Move superscripted text up */
sub {bottom: -0.25em} /* Move subscripted text down */
span.amp{font-family:Adobe Caslon Pro,Baskerville,"Goudy Old Style","Palatino","Palatino Linotype","Book Antiqua",Georgia,"Times New Roman",Times,serif;font-style:italic;font-size:110%;line-height:0;position:relative;vertical-align:baseline} /* Best available ampersand */

/* MICRO CLEARFIX HACK */
.cf:before, .cf:after {content:"";display:table} /* For modern browsers */
.cf:after {clear:both}
.cf {zoom:1} /* For IE 6/7 (trigger hasLayout) */

/* DEFAULT MOBILE STYLE */
body {width: 92%; margin: 0 auto} /* Center page without wrapper */
/* column grid */
.g1,.g2,.g3{display:block; position: relative; margin-left: 1%; margin-right: 1%}
/* 1 column grid */
.g1,.g2,.g3{width:98.0%}

/* Wrapper */
.main{
  padding-top: 50px;
  max-width: 1020px;
}
.wrapper{
  margin: 0 auto;
}

.block {
  margin-bottom: 250px;
}
/* Utility */
.chromeframe {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}
.clear{
  clear:both;
}
.bg-fixed {
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
.clearfix:after {
 content: ".";
 visibility: hidden;
 display: block;
 height: 0;
 clear: both;
}
.no-list{
  margin: 0px;
  padding: 0px;
  list-style: none;
}
.break{
  padding-bottom: 1em;
  clear: both;
}
/* Backgrounds */

.bg-1{
  /*background-image: url('../images/poly.jpg');*/
}
/* Header */
#header{
  margin-bottom: 2em;
}
#header #logo{
  text-align: center;

  display: none;
}
#header h4{
  margin-bottom:0px;
}
#header .visible{
  opacity: 1;
}

/* Tabs */
.etabs{
  margin: 0;
  padding: 0px;
  text-align: center;
}
.etabs li span{
  display: none;
}
#tab-data-wrap{
  padding: 30px 20px;
  background: #fff;
  border: 1px solid #f1f1f1;
  box-shadow: 0px 6px #c0392b;
  border-radius: 0px 0px 4px 4px;
}


.tab {
  display: inline-block;
  zoom: 1;
  *display: inline;
  background: #fff;
  border: solid 1px #f1f1f1;
  border-bottom: 0px;
  -moz-border-radius: 4px 4px 0 0;
  -webkit-border-radius: 4px 4px 0 0;
  margin-right:10px;
}

.tab a {
  font-weight: bold;
  text-transform: uppercase;
  font-size: 14px;
  display: block;
  padding: 2px 10px;
  outline: none;
  color: #888;
  text-decoration: none;
}

.tab a:hover {
  text-decoration: none;
}

.tab.active {
  background: #fff;
  position: relative;
  top: 1px;
  border-color: #f1f1f1;
  border-bottom: none;
}

.tab a.active {
  padding-top: 10px;
  color: #e74c3c;
}
.tab a i{
  font-size: 16px;
  margin-right: 0px;
}

/* INFO */
.info-wrap{

}
/* Photo */
.photo{
  float: left;
  height: 200px;
  width: 200px;
  margin-right: 20px;
  overflow: hidden;
}
.photo img{
 -webkit-border-radius: 4px;
 -moz-border-radius: 4px;
 border-radius: 4px;
 width: 100%;
}
.info{

}
.info h2, #header h2{
  text-transform: uppercase;
  letter-spacing: 2px;
  margin-bottom: .3em;
}
.info h4, #header h4{
  color: #999;
}
/* Contact */
.main-links{

}
.main-links ul{
  list-style: none outside none;
  margin: 0;
  padding: 0;
}
.main-links ul li{
  border-bottom: 1px solid #F1F1F1;
  padding: 10px 0;
}
.main-links ul li a{

  font-size: 14px;

}
/* Contact-info */
.contact-info{

}
.contact-info i{

}

/* Icon Styling */
.contact-info i{

  color: #333;
  font-size: 46px;

}
/* Item Box */

.item-box{
  padding: 6px 6px 6px 10px;
  border: 1px solid #f1f1f1;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}
.item-box i{
  float: left;
  margin-right: 12px;
}
.item-box i.icon-envelope{

}
.item-box .item-data{
 margin-top: 6px;
}
.item-box .item-data h3{
  line-height: 1em;
  margin: 3px 0px 0px 0px;
  font-size: 1em;

}
.item-box .item-data p{
  margin: 0px;
  font-size: 12px;
  color: #999;
}

/* WorkExperience */
.work li{
  margin-bottom: 1em;
}
.work li span{
  float: right;
}
.work li h5{
  float: left;
}
.work li p{
  clear: both;
}

/* Portfolio */
.image{
  position: relative;
}
.image img{
  margin: 0px;
  width: 100%;
}
.image-overlay {
  position: absolute;
  z-index: 5;
  top: 0;
  overflow: hidden;
  width: 100%;
  height: 99%;
  background-color: rgba(231, 76, 60,.6);
  text-align: center;
  opacity:0;
  filter: alpha(opacity=0);
  -webkit-transition: all 450ms ease-out 0s;
  -moz-transition: all 450ms ease-out 0s;
  -o-transition: all 450ms ease-out 0s;
  transition: all 450ms ease-out 0s;
  -webkit-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -ms-transform: rotateY(180deg);
  transform: rotateY(180deg);
}
.image:hover .image-overlay{
  opacity: 1;
  filter: alpha(opacity=100);
  -webkit-transform: rotateY(0deg);
  -moz-transform: rotateY(0deg);
  -ms-transform: rotateY(0deg);
  transform: rotateY(0deg);
}
.image-overlay .image-link{
  position: relative;
  top: 50%;
  display: inline-block;
  margin-top: -20px;
}
/* Icon Box */
.sny-icon{
  display: block;
  margin-bottom: 1em;
  text-align: center;
}
.sny-icon i{
  display: inline-block;
  font-size: 60px;
}
.sny-icon-content{
  text-align: center;
}
.sny-icon-content h4{
  margin-bottom:6px;
}
.sny-icon-content p{
  margin-bottom: 0px;
}
/* ... */

